--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
 
 header {
   width:100%;
-  height: 100px;
-  background-image:("images/Zelda.png");
+  height: 300px;
+  background-image:("images/Zeldaheader.png");
   background-position: center;
   background-size:cover;
 
