--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 header {
   width:100%;
   height: 300px;
-  background-image:("images/Zeldaheader.png");
+  background-image: wp-content/uploads/2015/03/wiiu-zelda-link-.png
   background-position: center;
   background-size:cover;
 
