--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,14 @@ body {
 
 header {
   width:100%;
-<<<<<<< HEAD
-  height: 300px;
+  height: 500px;
   background-image: wp-content/uploads/2015/03/wiiu-zelda-link-.png
-=======
 
->>>>>>> origin/master
+
+//Zelda front bilde
+
   height: 400px;
-  background-image:("images/GG.jpg");
+  background-image:url("images/head.jpg");
   background-position: center;
   background-size:400px;
 
