--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,12 @@ main{
 
 h1{
   font-family: 'Yatra One';
+}
+canvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 800px;
+}
